combined summary insights

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "id": "728f0f94",
    "metadata": {},
    "outputs": [],
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "id": "197cb650",
    "metadata": {},
    "outputs": [
@@ -1150,6 +1150,132 @@
     "chi_square_test('area code')\n",
     "chi_square_test('international plan')\n",
     "chi_square_test('voice mail plan')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcf40af7",
+   "metadata": {},
+   "source": [
+    "## 5.3 Independent Samples T-Test (For Numerical Variables)\n",
+    "\n",
+    "**- What is the T-Test?**  \n",
+    "The T-Test compares the means of two groups (e.g., churned vs. non-churned) to determine if they are statistically different.\n",
+    "\n",
+    "\n",
+    "\n",
+    "**- Hypotheses:**  \n",
+    "- **Null Hypothesis (H₀):** There is no difference in the means of the two groups.  \n",
+    "- **Alternative Hypothesis (H₁):** There is a statistically significant difference.\n",
+    "\n",
+    "\n",
+    "\n",
+    "**- Assumptions:**  \n",
+    "- Data is approximately normally distributed (Central Limit Theorem applies due to large sample size).  \n",
+    "- Observations are independent.  \n",
+    "- Variances are approximately equal.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0336ce1d",
+   "metadata": {},
+   "source": [
+    "### T-Test Function(for numerical values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "14eccb0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "def t_test(col_name):\n",
+    "    churn_yes = df_clean[df_clean['churn'] == True][col_name]\n",
+    "    churn_no = df_clean[df_clean['churn'] == False][col_name]\n",
+    "    t_stat, p_val = ttest_ind(churn_yes, churn_no)\n",
+    "    print(f\"T-Test ➔ {col_name}\")\n",
+    "    print(f\"p-value: {p_val:.4f}\")\n",
+    "    if p_val < 0.05:\n",
+    "        print(\"POSITIVE Result: Significant difference between churn groups\\n\")\n",
+    "    else:\n",
+    "        print(\"NEGATIVE Result: No significant difference between churn groups\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b15b5de0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-Test ➔ account length\n",
+      "p-value: 0.3398\n",
+      "NEGATIVE Result: No significant difference between churn groups\n",
+      "\n",
+      "T-Test ➔ total day minutes\n",
+      "p-value: 0.0000\n",
+      "POSITIVE Result: Significant difference between churn groups\n",
+      "\n",
+      "T-Test ➔ total eve minutes\n",
+      "p-value: 0.0000\n",
+      "POSITIVE Result: Significant difference between churn groups\n",
+      "\n",
+      "T-Test ➔ total night minutes\n",
+      "p-value: 0.0405\n",
+      "POSITIVE Result: Significant difference between churn groups\n",
+      "\n",
+      "T-Test ➔ total intl minutes\n",
+      "p-value: 0.0001\n",
+      "POSITIVE Result: Significant difference between churn groups\n",
+      "\n",
+      "T-Test ➔ customer service calls\n",
+      "p-value: 0.0000\n",
+      "POSITIVE Result: Significant difference between churn groups\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "t_test('account length')\n",
+    "t_test('total day minutes')\n",
+    "t_test('total eve minutes')\n",
+    "t_test('total night minutes')\n",
+    "t_test('total intl minutes')\n",
+    "t_test('customer service calls')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c25f1aca",
+   "metadata": {},
+   "source": [
+    "### 5.4 Combined Insights Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abb04edb",
+   "metadata": {},
+   "source": [
+    "| Variable               | Significant? | Test Used  |\n",
+    "| ---------------------- | ------------ | ---------- |\n",
+    "| International Plan     | Positive        | Chi-Square |\n",
+    "| Voice Mail Plan        | Positive        | Chi-Square |\n",
+    "| State                  | Negative        | Chi-Square |\n",
+    "| Area Code              | Negative        | Chi-Square |\n",
+    "| Total Day Minutes      | Positive         | T-Test     |\n",
+    "| Total Eve Minutes      | Positive         | T-Test     |\n",
+    "| Total Night Minutes    | Positive         | T-Test     |\n",
+    "| Total Intl Minutes     | Positive        | T-Test     |\n",
+    "| Customer Service Calls | Positive       | T-Test     |\n",
+    "| Account Length         | Negative        | T-Test     |\n"
    ]
   }
  ],
