churn distribution analysis

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -1160,12 +1160,12 @@
    "id": "e14c46f5",
    "metadata": {},
    "source": [
-    "## 4.1.1 Summary of Categorical Features"
+    "## 4.1 Summary of Categorical Features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "id": "14255a4a",
    "metadata": {},
    "outputs": [
@@ -1257,15 +1257,23 @@
     }
    ],
    "source": [
-    "# Frequency counts for categorical variables\n",
+    "\n",
     "categorical_cols = ['state', 'area code', 'international plan', 'voice mail plan', 'churn']\n",
     "for col in categorical_cols:\n",
     "    print(f\"\\nValue counts for {col}:\\n\", df_clean[col].value_counts())\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "da7f5d98",
+   "metadata": {},
+   "source": [
+    "## 4.2 Churn Distribution Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "id": "c2340827",
    "metadata": {},
    "outputs": [
@@ -1298,7 +1306,7 @@
     }
    ],
    "source": [
-    "# Churn value counts & percentage\n",
+    "\n",
     "churn_counts = df_clean['churn'].value_counts()\n",
     "churn_percent = df_clean['churn'].value_counts(normalize=True) * 100\n",
     "print(\"Churn Counts:\\n\", churn_counts)\n",
@@ -1307,7 +1315,8 @@
     "# Visualize churn distribution\n",
     "sns.countplot(x='churn', data=df_clean)\n",
     "plt.title('Churn Distribution')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
