summary of findings

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -1582,10 +1582,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b125da6",
+   "metadata": {},
+   "source": [
+    "## 4.7 EDA Summary\n",
+    "#### EDA Summary of Findings\n",
+    "\n",
+    "- **Churn Rate:** X% churned customers, indicating [balanced/imbalanced] data.\n",
+    "- **International Plan:** Customers with international plans churn more frequently.\n",
+    "- **Customer Service Calls:** A significant spike in churn after 3-4 service calls.\n",
+    "- **Usage Metrics:** Churners tend to have higher daily usage (minutes/charges).\n",
+    "- **Correlations:** \n",
+    "   - Strong correlation between `total day minutes` and `total day charge`.\n",
+    "   - `Customer service calls` shows positive correlation with churn.\n",
+    "- **Outliers:** Detected in `total intl minutes` — flagged for preprocessing.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ce68fe2a",
    "metadata": {},
    "source": [
-    "## 5️. Statistical Analysis"
+    "# 5️. Statistical Analysis"
    ]
   },
   {
