--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -15,7 +15,7 @@
     "However, customer churn — when subscribers discontinue using SyriaTel’s services — poses a significant business challenge.  \n",
     "Losing customers not only decreases revenue but also increases costs due to the need for acquiring new customers through marketing and promotional efforts.\n",
     "\n",
-    "---\n",
+    "\n",
     "\n",
     "## 1.2 Business Objective\n",
     "\n",
@@ -28,7 +28,7 @@
     "\n",
     "Ultimately, this will help **reduce churn rates**, save on customer acquisition costs, and maximize long-term profitability.\n",
     "\n",
-    "---\n",
+    "\n",
     "\n",
     "## 1.3 Stakeholders\n",
     "\n",
@@ -39,7 +39,7 @@
     "| **Customer Service** | Improve customer engagement and support |\n",
     "| **Data Science Team** | Develop and deploy predictive churn models |\n",
     "\n",
-    "---\n",
+    "\n",
     "\n",
     "## 1.4 Business Problem Statement\n",
     "\n",
@@ -49,7 +49,7 @@
     "\n",
     "By predicting churn probability, SyriaTel can intervene before losing the customer.\n",
     "\n",
-    "---\n",
+    "\n",
     "\n",
     "## 1.5 Project Goals\n",
     "\n",
@@ -57,7 +57,7 @@
     "- **Identify key drivers** (features) contributing to churn.\n",
     "- **Translate data insights into actionable business recommendations.**\n",
     "\n",
-    "---\n",
+    "\n",
     "\n",
     "## 1.6 Success Metrics\n",
     "\n",
@@ -65,7 +65,7 @@
     "- **Business Impact:** Provide insights that SyriaTel’s marketing and customer success teams can implement.\n",
     "- **Actionable Insights:** Highlight features that are strong predictors of churn to inform business decisions.\n",
     "\n",
-    "---\n",
+    "\n",
     "\n",
     "## 1.7 Project Scope and Limitations\n",
     "\n",
@@ -607,6 +607,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dde56d3a",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "677d1f91",
    "metadata": {},
    "source": [
@@ -856,6 +864,14 @@
     "y = df_encoded['churn']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7db1da7",
+   "metadata": {},
+   "source": [
+    "----"
    ]
   },
   {
@@ -1600,6 +1616,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f6fdca12",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ce68fe2a",
    "metadata": {},
    "source": [
@@ -1834,6 +1858,59 @@
     "| Total Intl Minutes     | Positive        | T-Test     |\n",
     "| Customer Service Calls | Positive       | T-Test     |\n",
     "| Account Length         | Negative        | T-Test     |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de27429c",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd97d244",
+   "metadata": {},
+   "source": [
+    "## 6. Machine Learning Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff842b5f",
+   "metadata": {},
+   "source": [
+    "#### 6.1 Spliting Data into Train and Test Sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8245897d",
+   "metadata": {},
+   "source": [
+    "Objective:\n",
+    "\n",
+    "-To evaluate model performance on unseen data and avoid overfitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "82e78a36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Define features and target\n",
+    "X = df_clean.drop('churn', axis=1)\n",
+    "y = df_clean['churn']\n",
+    "\n",
+    "# Split (80% train, 20% test)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")\n"
    ]
   }
  ],
