decision tree clasifier

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -1896,14 +1896,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "82e78a36",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Define features and target\n",
     "X = df_clean.drop('churn', axis=1)\n",
     "y = df_clean['churn']\n",
     "\n",
@@ -1911,6 +1910,142 @@
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42, stratify=y\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8b8d277",
+   "metadata": {},
+   "source": [
+    "### 6.2 Define Features & Target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "b0557247",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define features (X) and target (y)\n",
+    "X = df_clean.drop(['churn', 'phone number', 'state'], axis=1)  \n",
+    "# Dropping non-informative columns\n",
+    "y = df_clean['churn']\n",
+    "\n",
+    "# Converting categorical variables using OneHotEncoding \n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "le = LabelEncoder()\n",
+    "X['international plan'] = le.fit_transform(X['international plan'])\n",
+    "X['voice mail plan'] = le.fit_transform(X['voice mail plan'])\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6630d6d5",
+   "metadata": {},
+   "source": [
+    "#### 6.3 Baseline Model — Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "aa05fcb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.88      0.97      0.92       570\n",
+      "           1       0.50      0.20      0.28        97\n",
+      "\n",
+      "    accuracy                           0.85       667\n",
+      "   macro avg       0.69      0.58      0.60       667\n",
+      "weighted avg       0.82      0.85      0.83       667\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[551  19]\n",
+      " [ 78  19]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Administrator\\moringa\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "# Initialize and train\n",
+    "lr = LogisticRegression(max_iter=1000)\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict and evaluate\n",
+    "y_pred_lr = lr.predict(X_test)\n",
+    "\n",
+    "print(\"Logistic Regression Classification Report:\\n\", classification_report(y_test, y_pred_lr))\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_lr))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89f2cf50",
+   "metadata": {},
+   "source": [
+    "#### 6.4 Decision Tree Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "e44829e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      0.96      0.95       570\n",
+      "           1       0.72      0.65      0.68        97\n",
+      "\n",
+      "    accuracy                           0.91       667\n",
+      "   macro avg       0.83      0.80      0.81       667\n",
+      "weighted avg       0.91      0.91      0.91       667\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "dt = DecisionTreeClassifier(random_state=42)\n",
+    "dt.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_dt = dt.predict(X_test)\n",
+    "\n",
+    "print(\"Decision Tree Classification Report:\\n\", classification_report(y_test, y_pred_dt))\n"
    ]
   }
  ],
