--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2088,6 +2088,59 @@
     "# 5. Printing the classification report\n",
     "print(\"Random Forest Classification Report:\\n\", classification_report(y_test, y_pred_rf))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90975d66",
+   "metadata": {},
+   "source": [
+    "#### 6.6 Hyperparameter (Random Forest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "58ff5042",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters Found:\n",
+      " {'max_depth': None, 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 50}\n",
+      "Tuned Random Forest Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.92      0.94       101\n",
+      "           1       0.92      0.96      0.94        99\n",
+      "\n",
+      "    accuracy                           0.94       200\n",
+      "   macro avg       0.94      0.94      0.94       200\n",
+      "weighted avg       0.94      0.94      0.94       200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = {\n",
+    "    'n_estimators': [50, 100, 200],\n",
+    "    'max_depth': [None, 5, 10],\n",
+    "    'min_samples_split': [2, 5],\n",
+    "    'min_samples_leaf': [1, 2]\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(RandomForestClassifier(random_state=42), param_grid, cv=3, scoring='accuracy')\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Best Parameters Found:\\n\", grid_search.best_params_)\n",
+    "best_rf = grid_search.best_estimator_\n",
+    "\n",
+    "y_pred_best_rf = best_rf.predict(X_test)\n",
+    "print(\"Tuned Random Forest Classification Report:\\n\", classification_report(y_test, y_pred_best_rf))\n"
+   ]
   }
  ],
  "metadata": {
