--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 64,
    "id": "58ff5042",
    "metadata": {},
    "outputs": [
@@ -2125,13 +2125,6 @@
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "param_grid = {\n",
-    "    'n_estimators': [50, 100, 200],\n",
-    "    'max_depth': [None, 5, 10],\n",
-    "    'min_samples_split': [2, 5],\n",
-    "    'min_samples_leaf': [1, 2]\n",
-    "}\n",
-    "\n",
     "grid_search = GridSearchCV(RandomForestClassifier(random_state=42), param_grid, cv=3, scoring='accuracy')\n",
     "grid_search.fit(X_train, y_train)\n",
     "\n",
@@ -2140,6 +2133,54 @@
     "\n",
     "y_pred_best_rf = best_rf.predict(X_test)\n",
     "print(\"Tuned Random Forest Classification Report:\\n\", classification_report(y_test, y_pred_best_rf))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81e54e0e",
+   "metadata": {},
+   "source": [
+    "#### 6.7 Feature Importance (Random Forest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "2c622445",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[65], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m importances \u001b[38;5;241m=\u001b[39m best_rf\u001b[38;5;241m.\u001b[39mfeature_importances_\n\u001b[1;32m----> 2\u001b[0m features \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39mcolumns\n\u001b[0;32m      4\u001b[0m feature_importance_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFeature\u001b[39m\u001b[38;5;124m'\u001b[39m: features, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mImportance\u001b[39m\u001b[38;5;124m'\u001b[39m: importances})\n\u001b[0;32m      5\u001b[0m feature_importance_df\u001b[38;5;241m.\u001b[39msort_values(by\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mImportance\u001b[39m\u001b[38;5;124m'\u001b[39m, ascending\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'columns'"
+     ]
+    }
+   ],
+   "source": [
+    "importances = best_rf.feature_importances_\n",
+    "features = X.columns\n",
+    "\n",
+    "feature_importance_df = pd.DataFrame({'Feature': features, 'Importance': importances})\n",
+    "feature_importance_df.sort_values(by='Importance', ascending=False, inplace=True)\n",
+    "\n",
+    "# Plot\n",
+    "sns.barplot(x='Importance', y='Feature', data=feature_importance_df)\n",
+    "plt.title('Feature Importances from Random Forest')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0263194",
+   "metadata": {},
+   "source": [
+    "## 7.Findings & Recommendations\n",
+    "This section distills insights from your data exploration, statistics, and model evaluations into clear findings and actionable business recommendations."
    ]
   }
  ],
