findings and recomendations

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2176,11 +2176,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0263194",
+   "id": "d6ee60a8",
    "metadata": {},
    "source": [
-    "## 7.Findings & Recommendations\n",
-    "This section distills insights from your data exploration, statistics, and model evaluations into clear findings and actionable business recommendations."
+    "## 7. Findings & Recommendations"
    ]
   }
  ],
