--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2179,7 +2179,10 @@
    "id": "d6ee60a8",
    "metadata": {},
    "source": [
-    "## 7. Findings & Recommendations"
+    "## 7. Findings & Recommendations\n",
+    "\n",
+    "#### - Executive Summary\n",
+    "This document presents a detailed analysis of customer churn within our dataset, distilling critical insights from data exploration, statistical analysis, and machine learning model evaluations. Our findings highlight the primary drivers of churn and provide actionable, data-driven recommendations aimed at improving customer retention and overall business performance.\n"
    ]
   }
  ],
