--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2182,7 +2182,13 @@
     "## 7. Findings & Recommendations\n",
     "\n",
     "#### - Executive Summary\n",
-    "This document presents a detailed analysis of customer churn within our dataset, distilling critical insights from data exploration, statistical analysis, and machine learning model evaluations. Our findings highlight the primary drivers of churn and provide actionable, data-driven recommendations aimed at improving customer retention and overall business performance.\n"
+    "This document presents a detailed analysis of customer churn within our dataset, distilling critical insights from data exploration, statistical analysis, and machine learning model evaluations. Our findings highlight the primary drivers of churn and provide actionable, data-driven recommendations aimed at improving customer retention and overall business performance.\n",
+    "\n",
+    "## 7.1 Key Findings\n",
+    "#### 7.1.1 Churn Rate Overview\n",
+    "- Current Churn Rate: Approximately 14.5% of customers in the dataset have churned.\n",
+    "\n",
+    "- Implication: This significant class imbalance (churners vs. non-churners) necessitates a focus on optimizing model recall for the positive class (churn) to ensure we effectively identify at-risk customers, rather than solely relying on overall accuracy.\n"
    ]
   }
  ],
