top predictors of chun

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2188,7 +2188,16 @@
     "#### 7.1.1 Churn Rate Overview\n",
     "- Current Churn Rate: Approximately 14.5% of customers in the dataset have churned.\n",
     "\n",
-    "- Implication: This significant class imbalance (churners vs. non-churners) necessitates a focus on optimizing model recall for the positive class (churn) to ensure we effectively identify at-risk customers, rather than solely relying on overall accuracy.\n"
+    "- Implication: This significant class imbalance (churners vs. non-churners) necessitates a focus on optimizing model recall for the positive class (churn) to ensure we effectively identify at-risk customers, rather than solely relying on overall accuracy.\n",
+    "\n",
+    "#### 7.1.2 Top Predictors of Churn\n",
+    "Based on rigorous model feature importance analysis and statistical significance testing, the most influential factors predicting customer churn are:\n",
+    "\n",
+    "- Customer Service Calls: A strong positive correlation exists between the number of customer service calls and churn. Customers who make more calls are significantly more likely to churn.\n",
+    "\n",
+    "- International Plan Subscription: Customers subscribed to the international plan exhibit a notably higher churn frequency compared to those without the plan.\n",
+    "\n",
+    "- Daytime Usage (Minutes & Charge): Higher consumption of total day minutes and corresponding day charges are consistently associated with increased churn risk.\n"
    ]
   }
  ],
