model performance summary

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2197,7 +2197,16 @@
     "\n",
     "- International Plan Subscription: Customers subscribed to the international plan exhibit a notably higher churn frequency compared to those without the plan.\n",
     "\n",
-    "- Daytime Usage (Minutes & Charge): Higher consumption of total day minutes and corresponding day charges are consistently associated with increased churn risk.\n"
+    "- Daytime Usage (Minutes & Charge): Higher consumption of total day minutes and corresponding day charges are consistently associated with increased churn risk.\n",
+    "\n",
+    "#### 7.1.3 Model Performance Summary\n",
+    "Our evaluation of various classification models revealed the following:\n",
+    "\n",
+    "- Logistic Regression: Demonstrated good precision in identifying non-churners but suffered from low recall, meaning it missed a substantial number of actual churners.\n",
+    "\n",
+    "- Decision Tree: Showed slightly improved recall over Logistic Regression but exhibited a tendency towards overfitting, limiting its generalization capabilities.\n",
+    "\n",
+    "- Random Forest (Tuned): Emerged as the best-performing model, achieving an accuracy of approximately 85%. Critically, it also delivered significantly improved recall for the churner class, as confirmed by its confusion matrix, making it more effective at identifying customers at risk of churning.\n"
    ]
   }
  ],
