--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2206,7 +2206,26 @@
     "\n",
     "- Decision Tree: Showed slightly improved recall over Logistic Regression but exhibited a tendency towards overfitting, limiting its generalization capabilities.\n",
     "\n",
-    "- Random Forest (Tuned): Emerged as the best-performing model, achieving an accuracy of approximately 85%. Critically, it also delivered significantly improved recall for the churner class, as confirmed by its confusion matrix, making it more effective at identifying customers at risk of churning.\n"
+    "- Random Forest (Tuned): Emerged as the best-performing model, achieving an accuracy of approximately 85%. Critically, it also delivered significantly improved recall for the churner class, as confirmed by its confusion matrix, making it more effective at identifying customers at risk of churning.\n",
+    "\n",
+    "#### 7.1.4 Statistical Observations\n",
+    "Complementary statistical tests reinforced the machine learning findings:\n",
+    "\n",
+    "1.T-tests: Revealed statistically significant differences between churners and non-churners across various continuous variables, including:\n",
+    "\n",
+    "- Total day minutes\n",
+    "\n",
+    "- Total evening calls\n",
+    "\n",
+    "- Customer service calls\n",
+    "\n",
+    "- International minutes\n",
+    "\n",
+    "2.Chi-Square Tests: Confirmed significant relationships for key categorical variables:\n",
+    "\n",
+    "- International plan\n",
+    "\n",
+    "- Voice mail plan\n"
    ]
   }
  ],
