--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2261,6 +2261,14 @@
     "\n",
     "    3. Deploy proactive, personalized retention campaigns (e.g., special offers, direct customer success outreach, tailored communication) to these identified high-risk groups. This data-driven approach will maximize the impact of retention efforts."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2f2b21e",
+   "metadata": {},
+   "source": [
+    "## 8. Conclusion"
+   ]
   }
  ],
  "metadata": {
