--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2267,7 +2267,16 @@
    "id": "a2f2b21e",
    "metadata": {},
    "source": [
-    "## 8. Conclusion"
+    "## 8. Conclusion\n",
+    "\n",
+    "## 8.1 Project Recap\n",
+    "- This project aimed to develop a robust predictive model for customer churn within a telecom company. Our objective was to leverage historical customer usage and account data to identify customers at risk of churning, thereby enabling proactive retention strategies.\n",
+    "\n",
+    "    - Objective: To accurately predict customer churn for a telecom company using historical usage and account data.\n",
+    "\n",
+    "    - Dataset: Analyzed 3,333 customer records, encompassing 21 diverse features including demographic information, service usage patterns, and various account attributes.\n",
+    "\n",
+    "    - Business Problem: High customer churn rates directly impact profitability. Understanding the underlying drivers of churn is essential for implementing effective retention efforts and safeguarding revenue.\n"
    ]
   }
  ],
