summary of approach

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2276,7 +2276,16 @@
     "\n",
     "    - Dataset: Analyzed 3,333 customer records, encompassing 21 diverse features including demographic information, service usage patterns, and various account attributes.\n",
     "\n",
-    "    - Business Problem: High customer churn rates directly impact profitability. Understanding the underlying drivers of churn is essential for implementing effective retention efforts and safeguarding revenue.\n"
+    "    - Business Problem: High customer churn rates directly impact profitability. Understanding the underlying drivers of churn is essential for implementing effective retention efforts and safeguarding revenue.\n",
+    "\n",
+    "## 8.2 Summary of Approach\n",
+    "Our analytical journey followed a structured methodology to ensure comprehensive insights and a reliable predictive model:\n",
+    "\n",
+    "- Data Understanding & Cleaning: Initiated by thoroughly examining the dataset for missing values, inconsistencies in data types, and performing necessary cleaning and preprocessing, particularly for categorical variables.\n",
+    "\n",
+    "- Exploratory Data Analysis (EDA) & Statistical Testing: Conducted in-depth EDA to uncover patterns and relationships. This was complemented by statistical tests (T-tests, Chi-Square) which confirmed significant associations between various features and customer churn, highlighting key predictors such as customer service calls, international plan subscription, and total day minutes.\n",
+    "\n",
+    "- Machine Learning Model Development: Explored and evaluated several classification algorithms, including Logistic Regression, Decision Tree, and Random Forest. Through iterative training and tuning, the Random Forest model consistently demonstrated the best performance, achieving a strong balance between overall accuracy and recall for the churn class.\n"
    ]
   }
  ],
