--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2287,6 +2287,21 @@
     "\n",
     "- Machine Learning Model Development: Explored and evaluated several classification algorithms, including Logistic Regression, Decision Tree, and Random Forest. Through iterative training and tuning, the Random Forest model consistently demonstrated the best performance, achieving a strong balance between overall accuracy and recall for the churn class.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26231644",
+   "metadata": {},
+   "source": [
+    "## 8.3 Key Takeaways\n",
+    "The project yielded several critical insights that are directly actionable:\n",
+    "\n",
+    "- Customer Service as a Critical Indicator: The number of customer service calls emerged as a primary red flag for customer dissatisfaction and a strong predictor of churn.\n",
+    "\n",
+    "- International Plan Risk: Customers subscribed to the international plan are at a demonstrably higher risk of churning, possibly due to perceived value, pricing, or service quality concerns.\n",
+    "\n",
+    "- Random Forest for Predictive Power: The tuned Random Forest model is recommended for future churn prediction due to its superior performance in balancing precision and recall, making it effective at identifying at-risk customers.\n"
+   ]
   }
  ],
  "metadata": {
