limitations and next steps

--- a/notebooks/Customerchun.ipynb
+++ b/notebooks/Customerchun.ipynb
@@ -2315,7 +2315,22 @@
     "\n",
     "- Optimized Customer Service: Provides data-driven insights to improve customer service workflows, potentially reducing the need for repeated calls and enhancing customer satisfaction.\n",
     "\n",
-    "- Customized Retention Strategies: Facilitates the development of highly customized offers and retention plans based on specific usage patterns and identified churn drivers, leading to more effective campaigns.\n"
+    "- Customized Retention Strategies: Facilitates the development of highly customized offers and retention plans based on specific usage patterns and identified churn drivers, leading to more effective campaigns.\n",
+    "\n",
+    "## 8.5 Limitations & Next Steps\n",
+    "While the project delivered valuable outcomes, it's important to acknowledge certain limitations and outline future directions:\n",
+    "\n",
+    "- Limitations:\n",
+    "    - Generalizability: The dataset is sourced from a single telecom provider, which may limit the direct generalizability of findings and the model's performance across different markets or providers.\n",
+    "\n",
+    "    - Class Imbalance: Despite efforts to optimize for recall, the inherent class imbalance in the dataset (low churn rate) presents a persistent challenge that requires ongoing monitoring and potentially more advanced handling techniques.\n",
+    "\n",
+    "- Next Steps:\n",
+    "    - Explore Advanced Ensemble Techniques: Investigate and test other powerful ensemble methods, such as Gradient Boosting (e.g., XGBoost, LightGBM), which may offer further improvements in predictive performance.\n",
+    "\n",
+    "    - Model Validation with Recent Data: Continuously test and validate the model's performance on the most recent customer data to ensure its ongoing relevance and accuracy.\n",
+    "\n",
+    "    - Operational Deployment & Monitoring: Transition the model into an operational monitoring tool, allowing for regular updates and real-time identification of high-risk customers, integrating it seamlessly into existing business processes."
    ]
   }
  ],
